--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "latest"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "@pinia/nuxt": "^0.4.11",
     "pinia": "^2.1.6",
     "sass": "^1.66.1"
