--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@pinia/nuxt": "^0.4.11",
+    "nuxt-storage": "^1.2.2",
     "pinia": "^2.1.6",
     "sass": "^1.66.1"
   }
