--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@nuxt/types": "^2.17.1",
     "@pinia/nuxt": "^0.4.11",
     "axios": "^1.5.0",
     "pinia": "^2.1.6",
