--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 NUXT_API_SECRET=api_secret_token
 NUXT_PUBLIC_BACKEND_API=http://wave-hackathon.test/api/
+NUXT_PUBLIC_PRIVATE_SITE_KEY=teamguardianofonenex
