--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxt/types": "^2.17.1",
     "@pinia/nuxt": "^0.4.11",
     "axios": "^1.5.0",
+    "lodash.debounce": "^4.0.8",
     "pinia": "^2.1.6",
     "sass": "^1.66.1"
   }
